Bug 1491374 - Don't use backdrop state for scrollbars, r=jhorak

Differential Revision: https://phabricator.services.mozilla.com/D6396